website/websites/u64q/code/meteor.1.scala.log

Tue, 17 Sep 2013 18:39:43 GMT

MAKE:
mv meteor.scala meteor.scala
mv: ‘meteor.scala’ and ‘meteor.scala’ are the same file
make: [meteor.scala_run] Error 1 (ignored)
/usr/local/src/scala-2.10.2/bin/scalac -optimise -target:jvm-1.7 meteor.scala
meteor.scala:296: error: value first is not a member of Array[String]
          args.first.toInt
               ^
one error found
make: [meteor.scala_run] Error 1 (ignored)
5.63s to complete and log all make actions

COMMAND LINE:
 /usr/local/src/jdk1.7.0_40/bin/java -server -XX:+TieredCompilation -XX:+AggressiveOpts  -Xbootclasspath/a:/usr/local/src/scala-2.10.2/lib/scala-library.jar:/usr/local/src/scala-2.10.2/lib/akka-actors.jar:/usr/local/src/scala-2.10.2/lib/typesafe-config.jar meteor 2098

PROGRAM FAILED 


PROGRAM OUTPUT:

Error: Could not find or load main class meteor
